changed so badges can have team badges and user badges instead of universal badges.
